@@ -7,6 +7,10 @@
     bumped up to 1.0
     * doc/xml/formbroker.xml: first draft of the
     manual page of package formbroker
+    * contrib/validate_mac.tcl: add example of
+    a validator
+    * doc/xml/commands.xml: fixed typo in ::rivet::xml
+    manual page
 
 2016-11-15 Massimo Manghi <mxmanghi@apache.org>
     * rivet/rivet-tcl/catch.tcl|try.tcl: better
